# Berth

./: GUIDE.md  README.md  WORK_PLAN.md  berth-build-prompt.md  pyproject.toml
sample/demo/: Dockerfile  app.py  berth.project.yaml
sample/extdemo/: berth.project.yaml
sample/extdemo/static/: index.html
sample/financeiq/: berth.project.yaml
sample/financeiq/api/: Dockerfile  main.py  manage_db.py  worker.py
sample/financeiq/web/: index.html
sample/legacyapp/: berth.project.yaml  docker-compose.yml
sample/legacyapp/static/: index.html
sample/maildemo/: Dockerfile  app.py  berth.project.yaml
scripts/: setup-wsl2-docker.sh
src/berth/: __init__.py  __main__.py  cli.py  constants.py  exceptions.py
src/berth/commands/: doctor.py  init_cmd.py  lifecycle.py  nuke.py  registry.py  setup.py
src/berth/dashboard/: Dockerfile  api.py  berth.project.yaml
src/berth/dashboard/static/: index.html
src/berth/infra/: docker.py  hosts.py  mkcert.py  traefik.py
src/berth/models/: __init__.py  config.py  manifest.py  registry.py
src/berth/platform/: __init__.py  base.py  linux.py  macos.py  windows.py
src/berth/services/: lifecycle_service.py  registry_service.py  release_service.py  setup_service.py  shared_service.py
src/berth/storage/: __init__.py  paths.py  yaml_store.py
src/berth/ui/: console.py
