[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "berth"
version = "0.1.0"
description = "Local release and deployment manager — stable HTTPS hostnames and release semantics for local projects"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "rich>=13.7",
    "platformdirs>=4.2",
    "requests>=2.31",
    "docker>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock",
    "ruff",
    "mypy",
]

[project.scripts]
berth = "berth.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/berth"]

[tool.ruff]
line-length = 100
target-version = "py311"
